--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <button id='3' class='three' onclick=homeAdd(3) disabled>+3</button>
                     </div>
                 </div>
-        <!-- ***************Gust******************* -->
+        <!-- ***************Gusts******************* -->
                 <div class='gust'>
                     <h3>GUEST</h3>
                    <div class='gust-score'><div id='gust-score' class="gscore ">0</div>
